# cmd/api/main.go
@@ -24,6 +24,7 @@ import (
 
 // @host      localhost:5000
 // @BasePath  /
+// @schemes   http https
 
 // @securityDefinitions.apikey BearerAuth
 // @in header
